<resources>
    <string name="app_name">Weather Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="add_city">Add City</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="weather_info">Weather Info</string>
    <string name="details">Details</string>
    <string name="current_temp">Current Temp</string>
    <string name="city_name">City name</string>
    <string name="hide">Hide</string>
    <string name="deleted_an_item">You just deleted a city</string>
    <string name="you_added_an_item">You just added a city</string>
    <string name="about_message">This is a Weather Info app developed by TheBumblebee.inc</string>
    <string name="create_new_city">Click here to create a new city</string>
    <string name="a_new_city">New City</string>
    <string name="new_city_name">New City Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="deleted_all_items">You just deleted all the cities</string>
    <string name="city_not_exist">The City you have typed does not exist</string>
    <string name="base_url">http://api.openweathermap.org</string>
    <string name="units_metric">metric</string>
    <string name="app_id">ea5f6780acc66f66d0ae96dba31adb9f</string>
    <string name="default_city">Budapest</string>
    <string name="no_data">No data</string>
    <string name="city_details">City Details</string>
    <string name="input_error">You need to input a city to search</string>
    <string name="city_add_cancelled">city addition cancelled</string>
    <string name="weather_summary">weather_summary</string>
    <string name="weather_icon">weather icon</string>
    <string name="humidity_value"> Humidity: %1$s</string>
    <string name="wind_speed">Wind speed: %1$s km/hr</string>
    <string name="pressure_units">Pressure: %1$s hPa</string>
    <string name="visibility_units">Visibility: %1$s m</string>
    <string name="cloud_cover">Cloud Cover: %1$s percent</string>
    <string name="min_temp">Min Temp: %1$s</string>
    <string name="max_temp">Max Temp: %1$s</string>
    <string name="sun_rise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="attention">Attention!!!</string>
    <string name="confirm_delete_all">Are you sure you want to delete all the cities?</string>
    <string name="yes">YES</string>
    <string name="confirm_delete_item">Are you sure you want to delete this city?</string>
    <string name="deletion_cancelled">Deletion cancelled</string>
    <string name="nav_header_image">nav header image</string>
    <string name="date_format">HH:mm</string>

</resources>
