<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/ken_burns_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/weather_background"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/cityDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_scrollFlags="scroll|enterAlways"
            card_view:cardBackgroundColor="#c4be85">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <RelativeLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvCityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/city_name"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tvCityTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvCityName"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@string/current_temp"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/tvWeatherDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvCityTemperature"
                        android:layout_centerHorizontal="true"
                        android:padding="5dp"
                        android:text="@string/weather_summary"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/ivIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_below="@id/tvWeatherDesc"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/weather_icon"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/weather_icon" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/tvMinTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:text="@string/min_temp"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvMaxTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/max_temp"
                        android:textSize="24sp"
                        card_view:ignore="RelativeOverlap" />


                    <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tvMinTemp"
                        android:text="@string/sun_rise"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tvMaxTemp"
                        android:text="@string/sunset"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvCityHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tvSunrise"
                        android:text="@string/humidity_value"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tvPressure"
                        android:text="@string/wind_speed"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tvCityHumidity"
                        android:text="@string/pressure_units"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvVisibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tvClouds"
                        android:text="@string/visibility_units"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tvClouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tvWind"
                        android:text="@string/cloud_cover"
                        android:textSize="24sp" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>